; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/media/video/extr_pxa_camera.c_pxa_camera_dma_irq_v.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/media/video/extr_pxa_camera.c_pxa_camera_dma_irq_v.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.pxa_camera_dev = type { i32 }

@DMA_V = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32, i8*)* @pxa_camera_dma_irq_v to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @pxa_camera_dma_irq_v(i32 %0, i8* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  %5 = alloca %struct.pxa_camera_dev*, align 8
  store i32 %0, i32* %3, align 4
  store i8* %1, i8** %4, align 8
  %6 = load i8*, i8** %4, align 8
  %7 = bitcast i8* %6 to %struct.pxa_camera_dev*
  store %struct.pxa_camera_dev* %7, %struct.pxa_camera_dev** %5, align 8
  %8 = load i32, i32* %3, align 4
  %9 = load %struct.pxa_camera_dev*, %struct.pxa_camera_dev** %5, align 8
  %10 = load i32, i32* @DMA_V, align 4
  %11 = call i32 @pxa_camera_dma_irq(i32 %8, %struct.pxa_camera_dev* %9, i32 %10)
  ret void
}

declare dso_local i32 @pxa_camera_dma_irq(i32, %struct.pxa_camera_dev*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
